<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/BackgroundColor"
    android:baselineAligned="false"
    android:orientation="horizontal"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@color/cardColor"
        android:orientation="horizontal"
        android:padding="12dp">

        <ImageView
            android:layout_width="93dp"
            android:layout_height="93dp"
            android:src="@drawable/image" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:orientation="vertical">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:fontFamily=""
                android:text="@string/Person_name"
                android:textColor="@color/textBlackColor"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:fontFamily=""
                android:text="@string/personJop"
                android:textColor="@color/jopAndCountryNameColor"
                android:textSize="12sp" />


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:layout_marginRight="4dp"
                    android:src="@drawable/baseline_location_on_24" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/dm_sans"
                    android:text="@string/location"
                    android:textColor="@color/locationColor"
                    android:textSize="12sp" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:fontFamily="@font/dm_sans"
                    android:text="@string/reviewsNumber"
                    android:textColor="@color/textBlackColor"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/dm_sans"
                    android:text="@string/_4_5"
                    android:textColor="@color/textBlackColor"
                    android:textSize="12sp" />


                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="2dp"
                    android:src="@drawable/baseline_star_24" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="8dp"
            android:gravity="end"
            android:orientation="vertical">

            <TextView
                android:layout_width="38dp"
                android:layout_height="20dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/text_background"
                android:fontFamily="@font/dm_sans"
                android:gravity="center"
                android:text="@string/Time"
                android:textColor="@color/White"
                android:textSize="12sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/dm_sans"
                android:text="@string/country"
                android:textColor="@color/jopAndCountryNameColor"
                android:textSize="12sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/dm_sans"
                android:text="@string/History"
                android:textColor="@color/historyTextColor"
                android:textSize="12sp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>








